# KernelImageProcessing

./: CMakeLists.txt  CUDAError.h  Identity.cpp  Image.cpp  Image.h  Kernel.cpp  Kernel.h  KernelFactory.cpp  KernelFactory.h  Pixel.h  README.md  constantMemoryUtils.cu  filteringUtils.cu  filteringUtils.h  main.cpp  main.cu  mainCPP.cpp  speedTests.cu  speedTests.h
Filters/: BoxBlur.cpp  BoxBlur.h  EdgeDetection.cpp  EdgeDetection.h  GaussianBlur.cpp  GaussianBlur.h  Identity.cpp  Identity.h  Sharpen.cpp  Sharpen.h  Sobel.cpp  Sobel.h
results_FX+RTX/: 0-5k  1k  2k  4k  8k
src/: CMakeLists.txt  Image.cpp  Image.h  Kernel.cpp  Kernel.h  KernelFactory.cpp  KernelFactory.h  constantMemoryUtils.h  filteringUtils.h
src/Filters/: BoxBlur.cpp  EdgeDetection.h  GaussianBlur.cpp  Identity.cpp  Sharpen.cpp  Sharpen.h
src/images/: cuda_const_box_blur.ppm  cuda_const_identity.ppm  cuda_const_sharpen.ppm  cuda_naive_edge.ppm  cuda_naive_gauss.ppm  cuda_naive_sharpen.ppm  cuda_tiling_blur.ppm  cuda_tiling_box_blur.ppm  cuda_tiling_edge.ppm  cuda_tiling_identity.ppm  gauss3.ppm  openMP_boxBlur.ppm  sequential_sharpen.ppm
src/images/original/: ridSunset.ppm  ridridSunset.ppm
